syntax = "proto3";

package recomengine;

message GetMultiProductRecomRequest {
    int64 userID = 1;
    int32 limit = 2;
}

message GetMultiProductRecomResponse {
    repeated productRecom data = 1;
    productRecomMeta meta = 2;
}

message productRecomMeta {
    string overallAffinities = 1;
}

message productRecom {
    int64 id = 1;
    int64 price = 2;
    int64 shop_id = 3;
    int64 created = 4;
    string url = 5;
    string name = 6;
    repeated string images = 7;
    float affinity = 8;
}
