syntax = "proto3";

package recomengine;

import "product-recom.proto";

service RecomEngine {
    rpc GetMultiAffinityProductRecom (GetProductRecomRequest) returns (GetProductRecomResponse);
    rpc GetGenderAffinityProductRecom (GetProductRecomRequest) returns (GetProductRecomResponse);
    rpc GetUserAffinityProductRecom (GetProductRecomRequest) returns (GetProductRecomResponse);
}
